@@ -18,7 +18,7 @@
 
 package io.kadai.task.rest;
 
-import static io.kadai.rest.test.RestHelper.CLIENT;
+
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -49,6 +49,7 @@ import java.io.BufferedWriter;
 import java.io.OutputStreamWriter;
 import java.lang.reflect.Field;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.time.Instant;
@@ -83,6 +84,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.HttpClientErrorException.NotFound;
 import org.springframework.web.client.HttpStatusCodeException;
+import org.springframework.web.client.RestClient;
 import org.testcontainers.shaded.com.google.common.collect.Lists;
 
 /** Test Task Controller. */
@@ -94,11 +96,13 @@ class TaskControllerIntTest {
       BULK_RESULT_TASKS_MODEL_TYPE = new ParameterizedTypeReference<>() {};
 
   private final RestHelper restHelper;
+  private final RestClient restClient;
   @Autowired KadaiConfiguration kadaiConfiguration;
 
   @Autowired
-  TaskControllerIntTest(RestHelper restHelper) {
+  TaskControllerIntTest(RestHelper restHelper, RestClient restClient) {
     this.restHelper = restHelper;
+    this.restClient = restClient;
   }
 
   @Test
@@ -106,7 +110,7 @@ class TaskControllerIntTest {
     final String url = restHelper.toUrl("/api/v1/tasks/TKI:000000000000000000000000000000000104");
 
     ResponseEntity<TaskRepresentationModel> responseGet =
-        CLIENT
+        restClient
             .get()
             .uri(url)
             .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -122,7 +126,7 @@ class TaskControllerIntTest {
     theTaskRepresentationModel.setOwner("dummyUser");
 
     ResponseEntity<TaskRepresentationModel> responseUpdate =
-        CLIENT
+        restClient
             .put()
             .uri(url)
             .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -202,7 +206,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -221,7 +225,7 @@ class TaskControllerIntTest {
               + "?workbasket-id=WBI:100000000000000000000000000000000001";
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -250,7 +254,7 @@ class TaskControllerIntTest {
                   firstInstant, secondInstant, thirdInstant, fourthInstant);
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -267,7 +271,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000025");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -298,7 +302,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s=%s",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -326,7 +330,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-from=%s",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -354,7 +358,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-from=-1&custom-int-%s-to=123",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -382,7 +386,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-to=%s",
                         i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -410,7 +414,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-not=25",
                         i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -442,7 +446,7 @@ class TaskControllerIntTest {
                         i, i, i, i);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .get()
                         .uri(url)
                         .headers(
@@ -481,7 +485,7 @@ class TaskControllerIntTest {
                         i, i, i);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .get()
                         .uri(url)
                         .headers(
@@ -519,7 +523,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-within=15",
                         i, i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -549,7 +553,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-within=%s",
                         i, i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -579,7 +583,7 @@ class TaskControllerIntTest {
                             + "&custom-int-%s-not-within=",
                         i, i, i);
             ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-                CLIENT
+                restClient
                     .get()
                     .uri(url)
                     .headers(
@@ -608,7 +612,7 @@ class TaskControllerIntTest {
               + plannedToInstant
               + "&sort-by=PLANNED";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -630,7 +634,7 @@ class TaskControllerIntTest {
               + plannedFromInstant
               + "&sort-by=PLANNED";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -655,7 +659,7 @@ class TaskControllerIntTest {
               + "&sort-by=planned";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -686,7 +690,7 @@ class TaskControllerIntTest {
                       + "&sort-by=DUE",
                   firstInstant, secondInstant, thirdInstant, fourthInstant);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -709,7 +713,7 @@ class TaskControllerIntTest {
                       + "&priority-from=%s&priority-until=%s",
                   priorityFrom, priorityTo);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -732,7 +736,7 @@ class TaskControllerIntTest {
                       + "&priority-within=%s&priority-within=&priority-within=%s&priority-within=",
                   priorityFrom1, priorityFrom2);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -755,7 +759,7 @@ class TaskControllerIntTest {
                       + "&priority-not-from=%s&priority-not-until=%s",
                   priorityFrom, priorityTo);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -779,7 +783,7 @@ class TaskControllerIntTest {
                       + "&priority-not-within=%s&priority-not-within=",
                   priorityFrom1, priorityFrom2);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -805,7 +809,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -832,7 +836,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -859,7 +863,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -886,7 +890,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -910,7 +914,7 @@ class TaskControllerIntTest {
                       + "&classification-parent-key=%s",
                   parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -932,7 +936,7 @@ class TaskControllerIntTest {
                       + "&classification-parent-key-not=%s",
                   parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -951,7 +955,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS)
               + String.format("?classification-parent-key-like=%s", parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -970,7 +974,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS)
               + String.format("?classification-parent-key-not-like=%s", parentKey);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -990,7 +994,7 @@ class TaskControllerIntTest {
               + URLEncoder.encode(
                   "{\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1009,7 +1013,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"type\":\"Type2\",\"value\":\"Value2\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1028,7 +1032,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"company\":\"Company3\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1047,7 +1051,7 @@ class TaskControllerIntTest {
               + "?sor="
               + URLEncoder.encode("{\"type\":\"Type2\",\"value\":\"Quatsch\"}", UTF_8);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1068,7 +1072,7 @@ class TaskControllerIntTest {
               + "&wildcard-search-fields=CUSTOM_3"
               + "&wildcard-search-fields=CUSTOM_4";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1096,7 +1100,7 @@ class TaskControllerIntTest {
             String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
             ThrowingCallable httpCall =
                 () ->
-                    CLIENT
+                    restClient
                         .post()
                         .uri(url)
                         .headers(
@@ -1126,7 +1130,7 @@ class TaskControllerIntTest {
               + "&sort-by=NAME&order=DESCENDING&page-size=5&page=2";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1151,7 +1155,7 @@ class TaskControllerIntTest {
               + "&sort-by=NAME&order=WRONG";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1173,7 +1177,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000000");
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-b-1")))
@@ -1191,7 +1195,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?wildcard-search-value=%rt%";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1210,7 +1214,7 @@ class TaskControllerIntTest {
               + "?wildcard-search-fields=NAME,CUSTOM_3,CUSTOM_4";
       ThrowingCallable httpCall2 =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url2)
                   .headers(
@@ -1238,7 +1242,7 @@ class TaskControllerIntTest {
               + dueToInstant
               + "&sort-by=DUE";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1260,7 +1264,7 @@ class TaskControllerIntTest {
               + dueToInstant
               + "&sort-by=DUE";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1284,7 +1288,7 @@ class TaskControllerIntTest {
               + "&sort-by=planned";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1305,7 +1309,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS) + "?workbasket-key=USER-1-2&domain=DOMAIN_A";
 
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -1324,7 +1328,7 @@ class TaskControllerIntTest {
               + "?external-id=ETI:000000000000000000000000000000000003"
               + "&external-id=ETI:000000000000000000000000000000000004";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1341,7 +1345,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?workbasket-key=USER-1-2";
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -1359,7 +1363,7 @@ class TaskControllerIntTest {
     void should_GetAllTasksWithAdminRole() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1377,7 +1381,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS)
               + "?por-type=VNR&por-value=22334455&sort-by=POR_VALUE&order=DESCENDING";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1406,7 +1410,7 @@ class TaskControllerIntTest {
         String queryParams, int expectedSize) {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?" + queryParams;
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1424,7 +1428,7 @@ class TaskControllerIntTest {
     void should_TreatOwnerIsNullTrue_For_Value(String value) {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?owner-is-null" + value;
       ResponseEntity<TaskSummaryCollectionRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1444,7 +1448,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(
@@ -1467,7 +1471,7 @@ class TaskControllerIntTest {
               + "&sort-by=TASK_ID&order=ASCENDING"
               + "&page-size=5&page=16";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1500,7 +1504,7 @@ class TaskControllerIntTest {
               + "?sort-by=OWNER_LONG_NAME"
               + "&order=DESCENDING";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1520,7 +1524,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?group-by=POR_VALUE";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1549,7 +1553,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?group-by-sor=Type2";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1575,7 +1579,7 @@ class TaskControllerIntTest {
               + "?sort-by=DUE&sort-by=TASK_ID&"
               + "order=DESCENDING&order=ASCENDING";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1591,7 +1595,7 @@ class TaskControllerIntTest {
               + "order=DESCENDING&order=ASCENDING&"
               + "page-size=5&page=5";
       response =
-          CLIENT
+          restClient
               .get()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1626,7 +1630,7 @@ class TaskControllerIntTest {
               + "order=ASCENDING&order=ASCENDING&"
               + "page-size=5&page=2";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1654,7 +1658,7 @@ class TaskControllerIntTest {
     void should_GetAllTasksWithComments_When_FilteringByHasCommentsIsSetToTrue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?has-comments=true";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1678,7 +1682,7 @@ class TaskControllerIntTest {
     void should_GetAllTasksWithoutComments_When_FilteringByHasCommentsIsSetToFalse() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?has-comments=false";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1704,7 +1708,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000002");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1720,7 +1724,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTaskWithoutAttachments() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?without-attachment=true";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1738,7 +1742,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .get()
                       .uri(url)
                       .headers(
@@ -1755,7 +1759,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000001");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1771,7 +1775,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksBySecondaryObjectReferenceValue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?sor-value=Value2";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1787,7 +1791,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksBySecondaryObjectReferenceTypeLike() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?sor-type-like=Type";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1804,7 +1808,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS) + "?sor-value=Value2&sor-company=Company1";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1820,7 +1824,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksByIsReopenedFalse() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?is-reopened=false";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1838,7 +1842,7 @@ class TaskControllerIntTest {
     void should_ReturnFilteredTasks_When_GettingTasksByIsReopenedTrue() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS) + "?is-reopened=true";
       ResponseEntity<TaskSummaryPagedRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1857,7 +1861,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000070000000000000079");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1875,7 +1879,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000024");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1898,7 +1902,7 @@ class TaskControllerIntTest {
       TaskRepresentationModel taskRepresentationModel = getTaskResourceSample();
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1913,7 +1917,7 @@ class TaskControllerIntTest {
 
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1932,7 +1936,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url)
                   .headers(
@@ -1959,7 +1963,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -1972,7 +1976,7 @@ class TaskControllerIntTest {
 
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -1988,7 +1992,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2004,7 +2008,7 @@ class TaskControllerIntTest {
       String taskIdOfCreatedTask = responseCreate.getBody().getTaskId();
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2019,7 +2023,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2035,7 +2039,7 @@ class TaskControllerIntTest {
       String taskIdOfCreatedTask = responseCreate.getBody().getTaskId();
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, taskIdOfCreatedTask);
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2057,7 +2061,7 @@ class TaskControllerIntTest {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2075,7 +2079,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS);
       ResponseEntity<TaskRepresentationModel> responseCreate =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -2089,7 +2093,7 @@ class TaskControllerIntTest {
       String url2 =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID_FORCE, responseCreate.getBody().getTaskId());
       ResponseEntity<TaskRepresentationModel> responseDeleted =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2107,7 +2111,7 @@ class TaskControllerIntTest {
               + "\"primaryObjRef\":{\"company\":\"MyCompany1\",\"system\":\"MySystem1\","
               + "\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\",\"value\":\"00000001\"}}";
 
-      URL url = new URL(restHelper.toUrl(RestEndpoints.URL_TASKS));
+      URL url = URI.create(restHelper.toUrl(RestEndpoints.URL_TASKS)).toURL();
       HttpURLConnection con = (HttpURLConnection) url.openConnection();
       con.setRequestMethod("POST");
       con.setDoOutput(true);
@@ -2127,7 +2131,7 @@ class TaskControllerIntTest {
               + "\"primaryObjRef\":{\"company\":\"MyCompany1\",\"system\":\"MySystem1\","
               + "\"systemInstance\":\"MyInstance1\",\"type\":\"MyType1\",\"value\":\"00000001\"}}";
 
-      url = new URL(restHelper.toUrl(RestEndpoints.URL_TASKS));
+      url = URI.create(restHelper.toUrl(RestEndpoints.URL_TASKS)).toURL();
       con = (HttpURLConnection) url.openConnection();
       con.setRequestMethod("POST");
       con.setDoOutput(true);
@@ -2152,7 +2156,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:100000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2163,7 +2167,7 @@ class TaskControllerIntTest {
       Instant expectedReceived = Instant.parse("2019-09-13T08:44:17.588Z");
       originalTask.setReceived(expectedReceived);
       ResponseEntity<TaskRepresentationModel> responseUpdate =
-          CLIENT
+          restClient
               .put()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2181,7 +2185,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:100000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2191,7 +2195,7 @@ class TaskControllerIntTest {
       final TaskRepresentationModel originalTask = responseGet.getBody();
       assertThat(originalTask).isNotNull();
       ResponseEntity<TaskRepresentationModel> responseUpdate =
-          CLIENT
+          restClient
               .put()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2209,7 +2213,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:100000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2225,7 +2229,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .put()
                   .uri(url)
                   .headers(
@@ -2340,7 +2344,7 @@ class TaskControllerIntTest {
 
       // When: Performing bulk update
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2366,7 +2370,7 @@ class TaskControllerIntTest {
       // Verify that one of the tasks was actually updated by fetching it
       String firstTaskId = taskIds.get(0);
       ResponseEntity<TaskRepresentationModel> getResponse =
-          CLIENT
+          restClient
               .get()
               .uri(restHelper.toUrl("/api/v1/tasks/" + firstTaskId))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2503,7 +2507,7 @@ class TaskControllerIntTest {
 
       // When: Performing bulk update
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2546,7 +2550,7 @@ class TaskControllerIntTest {
 
       // Verify that the successful task was actually updated
       ResponseEntity<TaskRepresentationModel> taskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(restHelper.toUrl("/api/v1/tasks/TKI:000000000000000000000000000000000003"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -2569,7 +2573,7 @@ class TaskControllerIntTest {
           assertThrows(
               HttpClientErrorException.BadRequest.class,
               () ->
-                  CLIENT
+                  restClient
                       .patch()
                       .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
                       .headers(
@@ -2590,7 +2594,7 @@ class TaskControllerIntTest {
       requestBody.put("taskIds", List.of());
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2612,7 +2616,7 @@ class TaskControllerIntTest {
           assertThrows(
               HttpClientErrorException.BadRequest.class,
               () ->
-                  CLIENT
+                  restClient
                       .patch()
                       .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
                       .headers(
@@ -2633,7 +2637,7 @@ class TaskControllerIntTest {
       requestBody.put("fieldsToUpdate", Map.of());
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .patch()
               .uri(restHelper.toUrl("/api/v1/tasks/bulkupdate"))
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2655,7 +2659,7 @@ class TaskControllerIntTest {
       String url =
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000039");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2665,7 +2669,7 @@ class TaskControllerIntTest {
       assertThat(responseGet.getBody().getState()).isEqualTo(TaskState.COMPLETED);
 
       ResponseEntity<TaskRepresentationModel> responseDelete =
-          CLIENT
+          restClient
               .delete()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2676,7 +2680,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2700,7 +2704,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_FORCE, "TKI:000000000000000000000000000000000026");
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2710,7 +2714,7 @@ class TaskControllerIntTest {
       assertThat(responseGet.getBody().getState()).isEqualTo(TaskState.CLAIMED);
 
       ResponseEntity<TaskRepresentationModel> responseDelete =
-          CLIENT
+          restClient
               .delete()
               .uri(urlForce)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2721,7 +2725,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .get()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2747,7 +2751,7 @@ class TaskControllerIntTest {
               + "&custom14=abc";
 
       ResponseEntity<TaskSummaryCollectionRepresentationModel> response =
-          CLIENT
+          restClient
               .delete()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2770,7 +2774,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -2785,7 +2789,7 @@ class TaskControllerIntTest {
       // set Owner and update Task
       taskRepresentationModel.setOwner("dummyUser");
       ResponseEntity<TaskRepresentationModel> responseUpdate =
-          CLIENT
+          restClient
               .put()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -2805,7 +2809,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -2822,7 +2826,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .put()
                   .uri(url)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -2852,7 +2856,7 @@ class TaskControllerIntTest {
       ThrowingConsumer<Pair<Boolean, String>> test =
           pair -> {
             ResponseEntity<TaskRepresentationModel> response =
-                CLIENT
+                restClient
                     .post()
                     .uri(url)
                     .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2879,7 +2883,7 @@ class TaskControllerIntTest {
               "TKI:000000000000000000000000000000000003",
               "WBI:100000000000000000000000000000000006");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2911,7 +2915,7 @@ class TaskControllerIntTest {
       ThrowingConsumer<Pair<Boolean, String>> test =
           pair -> {
             ResponseEntity<Map<String, Object>> response =
-                CLIENT
+                restClient
                     .post()
                     .uri(url)
                     .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -2958,7 +2962,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .post()
                       .uri(url)
                       .headers(
@@ -2983,7 +2987,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_DISTRIBUTE, "WBI:100000000000000000000000000000000006");
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3037,7 +3041,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_DISTRIBUTE, "WBI:100000000000000000000000000000000006");
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3076,7 +3080,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_DISTRIBUTE, "WBI:100000000000000000000000000000000006");
 
       ResponseEntity<Map<String, Object>> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3124,7 +3128,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .post()
                       .uri(url)
                       .headers(
@@ -3139,7 +3143,7 @@ class TaskControllerIntTest {
 
       assertThatThrownBy(
               () ->
-                  CLIENT
+                  restClient
                       .post()
                       .uri(url)
                       .headers(
@@ -3164,7 +3168,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable response =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url)
                   .headers(headersInt -> headersInt.addAll(headers))
@@ -3183,7 +3187,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_DISTRIBUTE, sourceWorkbasketId);
       ResponseEntity<BulkOperationResultsRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3205,7 +3209,7 @@ class TaskControllerIntTest {
 
       String url = restHelper.toUrl(RestEndpoints.URL_DISTRIBUTE, sourceWorkbasketId);
       ResponseEntity<BulkOperationResultsRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3229,7 +3233,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3246,7 +3250,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES,
               "TKI:000000000000000000000000000000000136");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3267,7 +3271,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3284,7 +3288,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES_FORCE,
               "TKI:000000000000000000000000000000000100");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3309,7 +3313,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3330,7 +3334,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES,
               "TKI:000000000000000000000000000000000136");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3354,7 +3358,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3376,7 +3380,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_CHANGES,
               "TKI:000000000000000000000000000000000236");
       ResponseEntity<TaskRepresentationModel> requestedChangesResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3400,7 +3404,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3420,7 +3424,7 @@ class TaskControllerIntTest {
               "TKI:000000000000000000000000000000000136");
       ThrowingCallable requestChangesResponse =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3445,7 +3449,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3462,7 +3466,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW,
               "TKI:000000000000000000000000000000000035");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3483,7 +3487,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3500,7 +3504,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW_FORCE,
               "TKI:000000000000000000000000000000000101");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3525,7 +3529,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3546,7 +3550,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW,
               "TKI:000000000000000000000000000000000035");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3568,7 +3572,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3590,7 +3594,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_REQUEST_REVIEW,
               "TKI:000000000000000000000000000000000100");
       ResponseEntity<TaskRepresentationModel> requestReviewResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3612,7 +3616,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3632,7 +3636,7 @@ class TaskControllerIntTest {
               "TKI:000000000000000000000000000000000035");
       ThrowingCallable requestReviewResponse =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3656,7 +3660,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3672,7 +3676,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_COMPLETE, "TKI:000000000000000000000000000000000102");
       ResponseEntity<TaskRepresentationModel> completeResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3698,7 +3702,7 @@ class TaskControllerIntTest {
       TaskIdListRepresentationModel request = new TaskIdListRepresentationModel(taskIds);
 
       ResponseEntity<Map> response =
-          CLIENT
+          restClient
               .patch()
               .uri(url)
               .headers(h -> h.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3723,7 +3727,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3740,7 +3744,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_COMPLETE_FORCE,
               "TKI:000000000000000000000000000000000028");
       ResponseEntity<TaskRepresentationModel> forceCompleteResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3766,7 +3770,7 @@ class TaskControllerIntTest {
       TaskIdListRepresentationModel request = new TaskIdListRepresentationModel(taskIds);
 
       ResponseEntity<BulkOperationResultsRepresentationModel> response =
-          CLIENT
+          restClient
               .patch()
               .uri(url)
               .headers(h -> h.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3793,7 +3797,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3809,7 +3813,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CANCEL, "TKI:000000000000000000000000000000000103");
       ResponseEntity<TaskRepresentationModel> cancelResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3831,7 +3835,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3847,7 +3851,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_TERMINATE, "TKI:000000000000000000000000000000000103");
       ResponseEntity<TaskRepresentationModel> terminateResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3870,7 +3874,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3886,7 +3890,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM, "TKI:000000000000000000000000000000000033");
       ResponseEntity<TaskRepresentationModel> claimResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3907,7 +3911,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3923,7 +3927,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM_FORCE, "TKI:000000000000000000000000000000000029");
       ResponseEntity<TaskRepresentationModel> claimResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -3941,7 +3945,7 @@ class TaskControllerIntTest {
     void should_SelectAndClaimTasks() {
       String url = restHelper.toUrl(RestEndpoints.URL_TASKS_ID_SELECT_AND_CLAIM + "?custom14=abc");
       ResponseEntity<TaskRepresentationModel> response =
-          CLIENT
+          restClient
               .post()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3952,7 +3956,7 @@ class TaskControllerIntTest {
 
       String url2 = restHelper.toUrl(RestEndpoints.URL_TASKS_ID, response.getBody().getTaskId());
       ResponseEntity<TaskRepresentationModel> responseGetTask =
-          CLIENT
+          restClient
               .get()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -3973,7 +3977,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -3989,7 +3993,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM, "TKI:000000000000000000000000000000000032");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4011,7 +4015,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4028,7 +4032,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_CLAIM + "?keepOwner=true",
               "TKI:000000000000000000000000000000000000");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4052,7 +4056,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4069,7 +4073,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_CLAIM_FORCE + "?keepOwner=true",
               "TKI:000000000000000000000000000000000001");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4093,7 +4097,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4109,7 +4113,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_CLAIM_FORCE, "TKI:000000000000000000000000000000000027");
       ResponseEntity<TaskRepresentationModel> cancelClaimResponse =
-          CLIENT
+          restClient
               .delete()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
@@ -4130,7 +4134,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(RestEndpoints.URL_TASKS_ID, "TKI:000000000000000000000000000000000026");
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> responseGet =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4148,7 +4152,7 @@ class TaskControllerIntTest {
               RestEndpoints.URL_TASKS_ID_CLAIM, "TKI:000000000000000000000000000000000026");
       ThrowingCallable httpCall =
           () ->
-              CLIENT
+              restClient
                   .delete()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4172,7 +4176,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4187,7 +4191,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_SET_READ, "TKI:000000000000000000000000000000000025");
       ResponseEntity<TaskRepresentationModel> setReadResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4208,7 +4212,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4223,7 +4227,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_SET_READ, "TKI:000000000000000000000000000000000027");
       ResponseEntity<TaskRepresentationModel> setUnreadResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4249,7 +4253,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4264,7 +4268,7 @@ class TaskControllerIntTest {
           restHelper.toUrl(
               RestEndpoints.URL_TASKS_ID_REOPEN, "TKI:000000000000000000000000000000000075");
       ResponseEntity<TaskRepresentationModel> reopenResponse =
-          CLIENT
+          restClient
               .post()
               .uri(url2)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-2")))
@@ -4284,7 +4288,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-2-2")))
@@ -4301,7 +4305,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable call =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-2-2")))
@@ -4321,7 +4325,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("teamlead-1")))
@@ -4338,7 +4342,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable call =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(
@@ -4359,7 +4363,7 @@ class TaskControllerIntTest {
 
       // retrieve task from Rest Api
       ResponseEntity<TaskRepresentationModel> getTaskResponse =
-          CLIENT
+          restClient
               .get()
               .uri(url)
               .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("admin")))
@@ -4376,7 +4380,7 @@ class TaskControllerIntTest {
 
       ThrowingCallable call =
           () ->
-              CLIENT
+              restClient
                   .post()
                   .uri(url2)
                   .headers(headers -> headers.addAll(RestHelper.generateHeadersForUser("user-1-1")))
